<resources>
    <string name="app_name">MobileProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!--onboarding-->
    <string name="welcome">Chào mừng đến với ứng dụng VLUS</string>
    <string name="start">Bắt đầu</string>

    <!--login-->
    <string name="login">Đăng nhập</string>
    <string name="loginWithPhone">Đăng nhập bằng số điện thoại</string>
    <string name="loginWithEmail">Đăng nhập bằng Email</string>
    <string name="verify">Xác nhận</string>
    <string name="email">Địa chỉ email</string>
    <string name="emailorphonenumb">Địa chỉ email hoặc số điện thoại</string>
    <string name="pass">Mật khẩu</string>
    <string name="Newpass">Mật khẩu mới</string>
    <string name="forgot">Quên mật khẩu</string>
    <string name="no_user">Chưa có tài khoản?</string>
    <string name="create_user">Tạo tài khoản</string>
    <string name="Rememberme">Nhớ tôi</string>
    <!--sign-up-->
    <string name="have_user">Đã có tài khoản?</string>

    <!--forget pass email-->
    <string name="forgot_pass">Bạn quên mật khẩu?</string>
    <string name="enter_email">Nhập số điện thoại để chúng tôi gửi mã xác nhận để tạo mật khẩu mới</string>
    <string name="send_code">Gửi mã xác nhận</string>
    <string name="remember">Bạn nhớ được mật khẩu rồi à?</string>

    <!--Verification-->
    <string name="verification">Mã xác nhận</string>
    <string name="enter_code">Vui lòng nhập mã xác nhận đã được gửi đến</string>
    <string name="please_enter">Nhập mã xác nhận</string>
    <string name="dont_get">Chưa nhận được?</string>
    <string name="send_again">Gửi lại</string>
    <string name="ok">Xác nhận</string>

    <!--new pass-->
    <string name="enter_pass">Nhập mật khẩu mới</string>
    <string name="pass_ok">Bạn nhập mật khẩu mới và xác nhận nó nhá</string>
    <string name="new_pass_again">Xác nhận mật khẩu</string>
    <!--Home-->
    <string name="for_you">Dành cho bạn</string>
    <string name="see_all">Xem tất cả</string>
    <string name="significant_product">Sản phẩm nổi bật</string>
    <!--Detail-->
    <string name="Detail">Chi tiết</string>
    <string name="see_more">Xem thêm</string>
    <string name="buy_now">Mua ngay</string>
    <string name="add_cart">Thêm vào giỏ hàng</string>
    <string name="quantity">Số lượng: </string>
    <string name="only">Chỉ còn lại 1 sản phẩm</string>
    <string name="added_cart">Sản phẩm đã được thêm vào giỏ hàng</string>

    <!--Cart_allItem-->
    <string name="your_cart">Giỏ hàng của bạn</string>
    <string name="use_sale">sử dụng mã VLUs khi thanh toán</string>
    <string name="sale_code">Mã khuyến mãi</string>
    <string name="use_sale_code">Sử dụng</string>
    <string name="sale">Giảm giá</string>
    <string name="total">Tổng cộng</string>
    <string name="pay">Thanh toán</string>
    <string name="doing">Đơn hàng của bạn đang được thực hiện....</string>

    <string name="DP_normal">Giao hàng nhanh</string>
    <string name="DP_lowCost">Giao hàng tiết kiệm</string>
    <string name="DP_highSpeed">Giao hàng hỏa tốc</string>

    <!--Search-->
    <string name="filter">Bộ lọc</string>
    <string name="price">Mức giá</string>
    <string name="cancel">Hủy</string>
    <string name="canceled">Đã hủy</string>

    <!--Settings-->
    <string name="setting">Cài đặt</string>
    <string name="account">Tài khoản</string>
    <string name="language">Ngôn ngữ</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="info">Thông tin</string>
    <string name="notification">Thông báo</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="present_language">vi</string>
    <string name="error_language">Bạn hiện đang ở ngôn ngữ tiếng Việt</string>
    <!--Profile-->
    <string name="avatar">Ảnh đại diện</string>
    <string name="upload">Tải ảnh đại diện lên</string>
    <string name="name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>

    <!--Favorite-->
    <string name="favorite">Yêu thích</string>
    <string name="home">Trang chủ</string>
    <string name="log_out">Đăng xuất</string>
    <string name="title_activity_signup_smstest" translatable="false">SignupActivitySMSTest</string>

    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="invalid_username">Tên người dùng không khả thi</string>
    <string name="invalid_password">Mật khẩu phải có hơn 5 ký tự</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="title_activity_login_smstest" translatable="false">LoginActivitySMSTest</string>
    <string name="payment_title">Phương thức thanh toán</string>
    <string name="payment_desc">Chọn phương thức thanh toán của bạn</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="payment_address">Địa chỉ:</string>

    <string name="Pending">Đang chuẩn bị</string>
    <string name="InProgress">Đang vận chuyển</string>
    <string name="Delivering2You">Đang giao</string>
    <string name="Delivered">Đã giao</string>
    <string name="Cancel">Đã hủy</string>

    <string name="onPending">Chúng tôi đang chuẩn bị đơn hàng</string>
    <string name="onInProgress">Chúng tôi đang trên dường vận chuyển</string>
    <string name="onDelivering2You">Đơn hàng đang giao tới cho bạn</string>
    <string name="onDelivered">Đơn hàng đã được giao cho bạn</string>
    <string name="onCancel">Đơn hàng đã bị hủy</string>
    <string name="orderHis">Lịch sử đặt hàng</string>
    <string name="orderTracking">Theo dõi đơn hàng</string>
    <string name="verify_desc">Vui lòng nhập mã xác nhận đã được gửi đến</string>
    <string name="noSent">Chưa nhận được?</string>


    <!--Order tracking-->

    <string name="memoryOption">Dung lượng</string>
    <string name="OrderSummary">Tóm Tắt Đơn Hàng</string>
    <string name="OrderId">Mã đơn hàng</string>
    <string name="YourOrders">Đơn hàng của bạn</string>
    <string name="DiscountValue">Giảm giá:</string>
    <string name="OtherFees">Phí áp dụng</string>
    <string name="ProvisionalTotal">Tổng tạm tính</string>
    <string name="OrderTracking">Theo Dõi Đơn Hàng</string>
    <string name="cash_on_delivery">Thanh toán khi nhận hàng</string>
    <string name="banking">Ngân hàng</string>
    <string name="credit_card">Credit Card</string>
    <string name="normal_speed">Bình thường</string>
    <string name="low_cost">Giao hàng tiết kiệm</string>
    <string name="high_speed">Hỏa tốc</string>
    <string name="iphone">Iphone</string>
    <string name="GlobalProducts">Hàng quốc tế</string>
    <string name="loading">Loading...</string>
    <string name="goods">món hàng</string>
    <string name="Ad">Có thể bạn quan tâm:</string>
    <string name="delivery_method">Phương thức giao hàng</string>
    <string name="empty_cart">Giỏ hàng rỗng</string>
    <string name="discount_code">Mã giảm giá</string>
    <string name="to_payment">Thanh toán</string>

</resources>