<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.PhoneLoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#172239"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/userPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/textView"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingStart="60dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/colorHint"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="-4dp" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/userPhoneNumber"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="@+id/userPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/userPhoneNumber" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"

        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/userPhoneNumber"
        android:src="@drawable/lock"
        app:layout_constraintStart_toStartOf="@+id/userPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/userPhoneNumber" />


    <TextView
        android:id="@+id/loginWithEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/loginWithEmail"
        android:textColor="#00CC96"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNumber" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNumber">

        <CheckBox
            android:id="@+id/RememberUser"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_toStartOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/Rememberme"
            app:layout_constraintStart_toEndOf="@+id/RememberUser"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbutton"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#00CC96"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="200dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"

            android:text="@string/no_user"
            app:layout_constraintEnd_toStartOf="@+id/taotaikhoan"
            app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

        <TextView
            android:id="@+id/taotaikhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user"
            android:textColor="#00CC96"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginbutton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>